[tool.poetry]
name = "ansible-test"
version = "0.1.0"
description = ""
authors = ["racterub <root@racterub.me>"]
readme = "README.md"
packages = [{include = "ansible_test"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
